--- a/resources/css/style2.css
+++ b/resources/css/style2.css
@@ -140,7 +140,7 @@ header{
 
 .hero-text-box{
 	text-align: left;
-	padding-top: 10%;
+	padding-top: 20vh;
 }
 
 h1,h2,h3{
@@ -209,12 +209,51 @@ nav{
 	height: 100px;
 	width: auto;
 	margin-top: 20px;
+	margin-left: 8.5%;
+}
+.logo-black{
+	display:none;
+	height: 50px;
+	width: auto;
+	margin: 5px 0;
+	margin-left: 8.5%;
+}
+
+
+/*STicky Nav*/
+
+.sticky{
+	position:fixed;
+	top:0;
+	left: 0;
+	width: 100%;
+	background-color: rgba(255,255,255,0.98);
+	box-shadow: 0 2px 2px #efefef;
+	z-index: 9999;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{
+	padding:16px 0px;
+	color: #555;
+}
+.sticky .main-nav {
+
+	margin-top: 18px;
 
 }
+.sticky .logo-black{
+	display: block;
+}
+.sticky .logo{
+	display: none;
+}
+
 
 .main-nav {
 	list-style: none;
 	margin-top: 55px;
+	margin-right: 5%;
 }
 .main-nav li{
 	display: inline-block;
