--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -29,6 +29,53 @@ section{
 }
 
 
+nav{
+	justify-content: flex-start;
+}
+.main-nav{
+	align-self: stretch;
+	margin-top: 35px;
+	margin-left: 25px;  
+	display: none;
+}
+.mobile-nav-icon{
+	display: inline-block;
+	margin-right: 5%;
+	
+}
+.main-nav li{
+	display: block;
+	
+
+}
+
+.main-nav li a:link,
+.main-nav li a:visited{
+	display: block;
+	border :none;
+	padding: 10px 0;
+	font-size: 1em;
+}
+
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{
+	padding:10px 0px;
+}
+.sticky .main-nav {
+
+	margin-top: 10px;
+
+}
+.sticky .mobile-nav-icon i{
+	color: #555;
+	
+}
+.sticky .mobile-nav-icon{
+	margin-top: 10px;
+}
+
+
 .step-box{margin-top: 10px;}
 .step-box:last-child{margin-top: 10px;}
 .works-steps{margin-bottom: 40px;}
